compiler/tests/should-pass/code-generation/CommitmentArray.via
fun main() {
    val x = Array[int]@Commitment(receivers = {bob, chuck}, sender = alice)(10);
    x[0] = input int from alice;
    x[1] = 1;
}

host alice : {A}
host bob : {A}
host chuck : {A}
